[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/asteroid.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/wormhole.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/obsticle.gd" type="Script" id=3]


[node name="obsticle_set" type="Node2D" groups=[
"Obsticles",
]]
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="Asteroid" parent="." instance=ExtResource( 1 )]

[node name="Asteroid2" parent="." instance=ExtResource( 1 )]

[node name="Wormhole" parent="." instance=ExtResource( 2 )]
[connection signal="exit_screen" from="Wormhole" to="." method="_on_Wormhole_exit_screen"]
[connection signal="game_over" from="Wormhole" to="." method="_on_Wormhole_game_over"]
